--- a/catalog.html
+++ b/catalog.html
@@ -139,6 +139,9 @@
             <span class="icecream-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
           </h3>
           </a>
+          <div class="hidden-article">
+            <button type="button">хочу</button>
+          </div>
         </div>
 
 
